[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/actors/Rock.gd" type="Script" id=1]
[ext_resource path="res://Resources/img_rock.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sounds/sfx_explode1.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Sounds/sfx_explode2.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.04398

[node name="Rock" type="Area2D" groups=[
"rock",
"destructable",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1" groups=[
"destructable",
]]

modulate = Color( 0.990479, 1, 0.695313, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.15
one_shot = false
autostart = true

[node name="sfxExplodeA" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sfxExplodeB" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="." to="." method="_on_Rock_area_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="finished" from="sfxExplodeA" to="." method="queue_free"]

[connection signal="finished" from="sfxExplodeB" to="." method="queue_free"]


